# huemidity

./: .gitignore  Cargo.toml  Info.plist  LICENSE  README.md  bridge.py  build.rs  bundle_macos.sh  config.json  config.py  huemidity_specification.md  install.bat  install.command  main.py  midi.py  pyproject.toml  requirements.txt  test_huemidi.py  test_huemidity.py
.github/workflows/: release.yml
huemidity/: __init__.py  bridge.py  config.py  main.py  midi.py  win32_tray.py
huemidity/ui/: app.js  index.html  style.css
src/: app.rs  config.rs  main.rs  midi.rs  tray.rs
src/hue/: mod.rs  types.rs
ui/: app.js  index.html  style.css
