[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huemidity"
version = "0.1.1"
description = "Binds incoming MIDI events to Philips Hue lights, groups, and scenes."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pywebview",
    "phue",
    "mido",
    "python-rtmidi",
    "requests",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'"
]

[project.gui-scripts]
huemidity = "huemidity.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["huemidity"]

[tool.setuptools.package-data]
huemidity = ["ui/*"]
